update consumer and provider