@@ -1,12 +1,10 @@
 package io.geekya215.nyarpc.consumer;
 
-import io.geekya215.nyarpc.UserService;
 import io.geekya215.nyarpc.handler.RpcResponseHandler;
 import io.geekya215.nyarpc.protocal.*;
 import io.geekya215.nyarpc.registry.EtcdRegistry;
 import io.geekya215.nyarpc.registry.Instance;
 import io.geekya215.nyarpc.registry.Registry;
-import io.geekya215.nyarpc.registry.RegistryConfig;
 import io.geekya215.nyarpc.serializer.SerializationType;
 import io.netty.bootstrap.Bootstrap;
 import io.netty.channel.Channel;
@@ -22,18 +20,21 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.lang.reflect.Proxy;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.concurrent.ThreadLocalRandom;
 import java.util.concurrent.atomic.AtomicLong;
 
 public final class Consumer {
     private static final Logger logger = LoggerFactory.getLogger(Consumer.class);
+
     private static final LoggingHandler CONSUMER_LOGGING_HANDLER = new LoggingHandler();
     private static final ProtocolCodec CONSUMER_PROTOCOL_CODEC = new ProtocolCodec();
+
     private final @NotNull AtomicLong sequenceGenerator;
-    private final @NotNull Map<String, @NotNull List<@NotNull Instance>> services;
+    private final @NotNull Map<@NotNull String, @NotNull List<@NotNull Instance>> services;
+    private final @NotNull Map<@NotNull Class<?>, @NotNull List<@NotNull Channel>> channels;
     private final @NotNull Registry registry;
 
     public Consumer(@NotNull ConsumerConfig consumerConfig) {
@@ -41,7 +42,12 @@ public final class Consumer {
         // Todo
         // use SPI
         this.registry = new EtcdRegistry(consumerConfig.registryConfig());
+
         this.services = new ConcurrentHashMap<>();
+        this.channels = new ConcurrentHashMap<>();
+
+        // Todo
+        // use init method
         discoveryService();
     }
 
@@ -55,12 +61,15 @@ public final class Consumer {
     private @NotNull Channel getChannel(@NotNull String host, int port) throws InterruptedException {
         final Bootstrap bootstrap = new Bootstrap();
         final NioEventLoopGroup eventloop = new NioEventLoopGroup();
-        final ChannelFuture future = bootstrap.group(eventloop)
+
+        final ChannelFuture future = bootstrap
+                .group(eventloop)
                 .channel(NioSocketChannel.class)
                 .handler(new ChannelInitializer<>() {
                     @Override
                     protected void initChannel(Channel ch) throws Exception {
                         ChannelPipeline pipeline = ch.pipeline();
+
                         pipeline.addLast(CONSUMER_LOGGING_HANDLER);
                         pipeline.addLast(new ProtocolFrameDecoder());
                         pipeline.addLast(CONSUMER_PROTOCOL_CODEC);
@@ -68,21 +77,42 @@ public final class Consumer {
                     }
                 })
                 .connect(host, port);
+
+        // Todo
+        // should close eventloop in close future listener
         return future.sync().channel();
     }
 
     @SuppressWarnings("unchecked")
-    public <T> @NotNull T getProxyService(Class<T> serviceClass) {
-        ClassLoader classLoader = serviceClass.getClassLoader();
-        Class<?>[] interfaces = {serviceClass};
-        Object o = Proxy.newProxyInstance(classLoader, interfaces, (proxy, method, args) -> {
-            long sequence = nextSequence();
+    public <T> @NotNull T getProxyService(@NotNull Class<T> serviceClass) {
+        final ClassLoader classLoader = serviceClass.getClassLoader();
+        final Class<?>[] interfaces = {serviceClass};
+        final Object o = Proxy.newProxyInstance(classLoader, interfaces, (proxy, method, args) -> {
+            final long sequence = nextSequence();
+
+            final List<@NotNull Channel> candidateChannels = channels.computeIfAbsent(serviceClass, clazz -> {
+                final List<@NotNull Instance> instances = services.get(clazz.getName());
+                final List<@NotNull Channel> tmp = new ArrayList<>();
+
+                for (final Instance instance : instances) {
+                    final String[] addr = instance.endpoint().split(":");
+                    final Channel channel;
+
+                    try {
+                        channel = getChannel(addr[0], Integer.parseInt(addr[1]));
+                    } catch (InterruptedException e) {
+                        throw new RuntimeException(e);
+                    }
+
+                    tmp.add(channel);
+                }
+
+                return tmp;
+            });
+
             // Todo
             // use load balance
-            final List<@NotNull Instance> instances = services.get(serviceClass.getName());
-            final Instance instance = instances.get(0);
-            final String[] addr = instance.endpoint().split(":");
-            final Channel channel = getChannel(addr[0], Integer.valueOf(addr[1]));
+            final Channel channel = candidateChannels.getFirst();
 
             final Header.Builder headerBuilder = new Header.Builder();
             final Header header = headerBuilder
@@ -105,10 +135,9 @@ public final class Consumer {
 
             final DefaultPromise<Object> promise = new DefaultPromise<>(channel.eventLoop());
 
-            RpcResponseHandler.PROMISE_RESULT.put(sequence, promise);
+            RpcResponseHandler.PROMISE_RESULTS.put(sequence, promise);
 
             promise.await();
-            channel.closeFuture().sync();
 
             if (promise.isSuccess()) {
                 return promise.getNow();
@@ -121,22 +150,5 @@ public final class Consumer {
 
     private long nextSequence() {
         return sequenceGenerator.getAndIncrement();
-    }
-
-    public static void main(String[] args) {
-        final RegistryConfig registryConfig = new RegistryConfig("http://localhost", 2379);
-        Consumer consumer = new Consumer(new ConsumerConfig(registryConfig));
-        UserService service = consumer.getProxyService(UserService.class);
-        String tom = service.greeting("tom");
-        ThreadLocalRandom rnd = ThreadLocalRandom.current();
-        for (int i = 0; i < 10; i++) {
-            int length = rnd.nextInt(5, 10);
-            StringBuilder sb = new StringBuilder();
-            for (int j = 0; j < length ; j++) {
-                sb.append(Character .valueOf((char) ('a' + rnd.nextInt(26))));
-            }
-            String res = service.greeting(sb.toString());
-            System.out.println(res);
-        }
     }
 }
